--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,11 +1,6 @@
 // These colors are specific to the theme. Do not use in a package!
-@gray: #373b41;
-@cyan: #8abeb7;
-@purple: #b294bb;
+@red: #ff0000;
 @green: #b5bd68;
-@red: #cc6666;
-@light-orange: #ff0000;
-
 @magenta: #fa4f68;
 @light-gray: #cdcdcd;
 @light-blue: #c2deff;
