--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -6,13 +6,13 @@
 // General colors
 @syntax-text-color: @light-gray;
 @syntax-cursor-color: white;
-@syntax-selection-color: lighten(@very-dark-gray, 10%);
+@syntax-selection-color: darken(@blue-gray, 30%);
 @syntax-background-color: @very-dark-gray;
 
 // Guide colors
 @syntax-wrap-guide-color: @very-dark-gray;
-@syntax-indent-guide-color: @gray;
-@syntax-invisible-character-color: @gray;
+@syntax-indent-guide-color: @blue-gray;
+@syntax-invisible-character-color: @blue-gray;
 
 // For find and replace markers
 @syntax-result-marker-color: @light-gray;
@@ -22,10 +22,10 @@
 @syntax-gutter-text-color: @dark-gray;
 @syntax-gutter-text-color-selected: lighten(@dark-gray, 10%);
 @syntax-gutter-background-color: @very-dark-gray;
-@syntax-gutter-background-color-selected: @gray;
+@syntax-gutter-background-color-selected: lighten(@very-dark-gray, 10%);
 
 // For git diff info. i.e. in the gutter
 @syntax-color-renamed: @blue;
 @syntax-color-added: @green;
-@syntax-color-modified: @magenta;
-@syntax-color-removed: @red;
+@syntax-color-modified: @blue;
+@syntax-color-removed: @magenta;
